tests/failures/past_date.rs
use todo_by::todo_by;

fn main() {
    todo_by!("2022-01-01");
    fn my_function() {}
}
